<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/naveen_weds_soni"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/punch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/punch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/lots_of_love_from_your_brother"
        android:textAlignment="center"
        android:textColor="@color/colorAccentDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/txtcategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/categories"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccentDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/viewLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/punch" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_marginTop="4dp"
        android:background="#447e7e7e"
        app:layout_constraintBottom_toTopOf="@id/hv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtcategories" />

    <HorizontalScrollView
        android:id="@+id/hv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/engagementCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"

                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageEngagement"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/engagement" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imageEngagement"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="@string/engagement"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/weddingCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageWedding"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/wedding" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imageWedding"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="@string/wedding"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/receptionCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageReception"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/reception" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imageReception"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="@string/reception"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/mehndiCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imagemehndi"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/mehndi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imagemehndi"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="Mehndi"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/naveenCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/naveen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/naveen1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/naveen"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="Naveen"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/soniCardView"
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/soni"
                        android:layout_width="180dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/soni1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/soni"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="8dp"
                        android:text="Soni"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_orange_light"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/txtimages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="Images"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccentDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/viewLine2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hv" />

    <View
        android:id="@+id/viewLine2"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#447e7e7e"
        app:layout_constraintBottom_toTopOf="@id/rv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtimages" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:nestedScrollingEnabled="true"
        android:paddingStart="4dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine2" />


    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Upload Images"
        android:textColor="@android:color/background_light"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>